# DeFaktS-LLM-annotation

./: .gitignore  README.md  pyproject.toml
data/processed/: DefaktS_Twitter.binary.csv
notebooks/: 00--Data-Exploration.ipynb  01--Naive-Binary-Classification-Embeds.ipynb  01--Naive-Binary-Classification-Fine-Tuning.ipynb  01--Naive-Binary-Classification-Prompting.ipynb  01--Naive-Prompt-Binary-Classification.ipynb
