[tool.poetry]
name = "defakts_llm_annotation"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = [
    "Simon Münker <simon.muenker@googlemail.de>",
    "Isabel Bezzaoui <Bezzaoui@fzi.de>"
]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
rich = "^13.9.2"
pydantic = "^2.9.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
cltrier-lib = "^0.1.6"
sentence-transformers = "^3.2.0"
torch = "^2.5.0"
evaluate = "^0.4.3"
transformers = {extras = ["torch"], version = "^4.46.3"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.8"
mypy = "^1.11.2"


[tool.ruff]
line-length = 96

[tool.ruff.lint]
select = ["I", "N", "UP", "A", "PL"]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
testpaths = [
    "tests",
]


[tool.mypy]
files = "cltrier_nlp"
disable_error_code = "import-untyped"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"